--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         }
     },
     "require": {
-        "nesbot/carbon": "2.73.0"
+        "nesbot/carbon": "2.73.0",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6"
